2010-04-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Prune some now-obsoleted funcs.

	* base.h (bufenlarge, bufscat, bufscpy): Delete func decls.
	* rcsfnms.c (bufrealloc, bufenlarge, bufscat, bufscpy): Delete funcs.

2010-04-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Replace ‘expandsym’ with ‘fully_numeric_no_k’.

	* base.h (expandsym): Delete func decl.
	(fully_numeric_no_k): New macro.
	* co.c (addjoin, main): Use ‘fully_numeric_no_k’.
	* rcs.c (numrev): Change var type to ‘struct cbuf’.
	(removerevs, doassoc, setlock, dolocks, domessages)
	(rcs_setstate, main): Use ‘fully_numeric_no_k’.
	* rcsrev.c (expandsym): Delete func.
	* rlog.c (getnumericrev): Use ‘fully_numeric_no_k’.
	* yarrrr.c [TEST_REV] (yarrrr): Likewise.

2010-04-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘BRANCHNO’, not ‘getbranchno’; zonk the latter.

	* rcsrev.c (take): If ‘count’ is zero, take it
	to be the number of fields right for a branch number.
	(getbranchno): Delete func.
	* base.h (getbranchno): Delete func decl.
	(BRANCHNO): New macro.
	* ci.c (addbranch): Use ‘BRANCHNO’.
	* rcs.c (removerevs): Likewise.
	* rlog.c (putadelta): Likewise.

2010-04-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘TAKE’, not ‘partialno’; zonk the latter.

	* base.h (take): New func decl.
	(partialno): Delete func decl.
	(TAKE): Move macro to here...
	* rcsrev.c (TAKE): ... from here.
	(take): Make non-static.
	(partialno): Delete func.
	* co.c (getancestor): Use ‘TAKE’.
	* rlog.c (getnumericrev): Likewise.

2010-04-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: take

	* rcsrev.c (take): New static func.
	(TAKE): New macro.
	(getbranchno, absent, partialno, genbranch, genrevs): Use ‘TAKE’.

2010-04-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘fully_numeric’, not ‘fexpandsym’; zonk the latter.

	* ci.c: #include "b-divvy.h".
	(newdelnum): Change type to ‘struct cbuf’.
	(ACCB, ACCS, OK, JAM, ADD): New macros.